# minecraft-mod-mcp

./: .clippy.toml  .gitattributes  .gitignore  .mcp.json  .opencode.json  CONTRIBUTING.md  Cargo.toml  LICENSE-CC0  LICENSE-MIT  PLAN.md  README.md  WIN-TEST-REPORT.md  build.gradle.kts  e2e_test.py  fabric-matrix-results.json  gen_launch_bat.py  justfile  package-lock.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_e2e_tests.ps1  run_e2e_tests.py  rustfmt.toml  settings.gradle.kts  test-mouse-results.json  win-fabric-client-results.json  win-server-fabric-vanilla-results.json
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: workflow.md
example-mod/: README.md  build.gradle.kts  run_tests.ps1
mcp-common/: build.gradle.kts  settings.gradle.kts
neoforge-dev/: build.gradle.kts
scripts/: _btn_test.py  _check_build.py  _check_jar.py  _enum_test.py  _final_test.py  _find_all_classes.py  _find_classes.py  _find_join.py  _gl_test.py  _verify_jar.py  build-report.json  build_all.py  build_common.py  build_fabric_mods.py  check_versions.py  ci_helper.py  clean.py  container.py  copy_sources.py  create_redstone.py  create_redstone_auto.py  create_redstone_full.py  create_world_debug.py  debug_page.py  debug_server.py  debug_stream.py  ensure-1.7x-cache.mjs  ensure-jdk.mjs  fix_fabric_mod.py  full_test.py  gen_embedded_versions.py  generate_mixins.py  generate_mods.py  generate_sources.py  generate_version_data.py  img_to_icon.py  init.py  install_fabric.py  install_forge.py  jf.py  (+28 more)
test-example-mod/: build.gradle.kts
test-world/: README.md
(+395 files in other folders)
