[workspace]
resolver = "2"
members = [
    "packages/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
authors = ["langyo <langyo.china@gmail.com>"]
license = "MIT"
description = "Minecraft MCP control server"
repository = "https://github.com/langyo/minecraft-neoforge-mcp"

[workspace.dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
which = "7"
imageproc = "0.26"
ab_glyph = "0.2"

[profile.dev]
debug = 1
opt-level = 0

[profile.dev.package."*"]
debug = 0

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 16
debug = 0
